--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,7 +15,7 @@
     "formulahendry.auto-close-tag",
     "formulahendry.auto-rename-tag",
     "formulahendry.code-runner",
-    "johnsoncodehk.volar",
+    "Vue.volar",
     "kamikillerto.vscode-colorize",
     "kisstkondoros.vscode-gutter-preview",
     "knisterpeter.vscode-commitizen",
